# libsettings

./: AUTHORS  ChangeLog  Makefile.am  NEWS  TODO  configure.ac
build-aux/: autotest.mk  warning.m4
src/: libsettings-fwd.hh  libsettings-values.hh  libsettings-values.hxx  libsettings.hh  libsettings.hxx
tests/: Makefile.am  access-notifier.at  access-notifier.cc  atlocal.in  package.m4.in  simple.at  simple.cc  testsuite.at  variant.at  variant.cc
